# remove-ai-flavor

./: .cursorignore  .gitignore  .markdownlint.json  .prettierignore  .prettierrc.json  AGENTS.md  Makefile  README.md  README_EN.md  package.json  pnpm-lock.yaml
api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 44ed2273699a_add_required_membership_type_to_agent.py  a9f3c2d1e4b5_retire_dify_agents.py  d936ec56f8e8_init.py
api/app/: main.py
api/app/agents/: agno.py  dify.py  llm.py
api/app/core/: config.py  exceptions.py  i18n.py  logging.py  security.py
api/app/crud/: admin.py  agent.py  chat.py  membership.py  message.py  order.py  user.py
api/app/db/: base.py
api/app/dependencies/: auth.py  db.py
api/app/models/: agent.py  chat.py  membership.py  message.py  order.py  user.py
api/app/schemas/: admin.py  agent.py  chat.py  membership.py  message.py  order.py  user.py
api/app/services/: email_service.py  guest_usage_service.py  membership_service.py  user_service.py
api/app/templates/: email_code_login_mail_template_en.html  email_code_login_mail_template_zh.html  email_code_register_mail_template_en.html  email_code_register_mail_template_zh.html  (+2 more)
api/scripts/: clean_imports.sh  run_postgres.sh  run_redis.sh
api/tests/: test_agent_access.py  test_agent_migrations.py  test_agent_schema.py  test_agno_agent.py  test_chat_agent_adapter.py  test_default_agent_source.py  test_guest_usage_service.py  test_text_optimizer.py
web/: Makefile  (+9 more)
(+136 files in other folders)
