[project]
name = "remove-ai-flavor-api"
version = "0.1.0"
requires-python = ">=3.12"
description = "Remove AI Flavor API"
authors = [
    { name="remove-ai-flavor", email="remove-ai-flavor@v2ai.org" }
]

dependencies = [
    "fastapi~=0.115.12",
    "uvicorn~=0.34.2",
    "pydantic~=2.11.3",
    "python-dotenv~=1.1.0",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary==2.9.5",
    "email-validator>=2.2.0",
    "passlib>=1.7.4",
    "python-jose>=3.4.0",
    "fastapi-mail>=1.4.2",
    "alembic>=1.15.2",
    "bcrypt==3.2",
    "redis>=6.0.0",
    "sqlmodel>=0.0.24",
    "openai>=1.78.0",
    "httpx>=0.27.0",
    "colorlog>=6.8.2",
    "stripe>=8.0.0",
    "resend>=0.6.0",
]

[tool.uv]
dev-dependencies = [
    "autoflake>=2.3.1",
    "isort>=5.13.2",
    "black>=24.0.0",
    "pre-commit>=4.0.1",
]

# Black 配置
[tool.black]
line-length = 128
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除的目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort 配置
[tool.isort]
profile = "black"
line_length = 128
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]
known_third_party = ["fastapi", "sqlmodel", "pydantic", "sqlalchemy"]
